--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "bootstrap": "^3.3.7",
     "core-js": "2.4.1",
     "es6-promise": "^4.0.5",
+    "frozenui": "^1.3.0",
     "html-loader": "^0.4.4",
     "html-withimg-loader": "^0.1.16",
     "image-webpack-loader": "^3.1.0",
